# hexlet_pytest

./: README.md  pyproject.toml
tests/: test_example.py
